gnome-desktop (2.12.3-1) unstable; urgency=low

  [ Ondřej Surý ]
  * Add versioned build dependency on gnome-doc-utils (Closes: #351634)

  [ Loic Minier ]
  * New upstream release.

 -- Loic Minier <lool@dooz.org>  Wed,  1 Mar 2006 19:18:54 +0100

gnome-desktop (2.12.2-2) unstable; urgency=low

  * Upload to unstable.

 -- Ondřej Surý <ondrej@debian.org>  Mon,  6 Feb 2006 14:49:01 +0100

gnome-desktop (2.12.2-1) experimental; urgency=low

  * New upstream release
  * debian/libgnome-desktop-2.shlibs:
    - updated (Closes: #344273)

 -- Guilherme de S. Pastore <guilherme.pastore@terra.com.br>  Wed, 21 Dec 2005 17:31:02 -0200

gnome-desktop (2.12.1-1) experimental; urgency=low

  * New upstream version.
  * debian/control.in:
    - Build-Depends on gnome-doc-utils.
    - updated for the packages changes.
    - updated the libgnomeui requirement.
  * debian/gnome-desktop-data.install, debian/gnome-about.install:
    - install the desktop file with the binary.   
  * debian/rules:
    - don't update scrollkeeper files on build.
  * debian/watch:
    - updated.

 -- Sebastien Bacher <seb128@debian.org>  Tue, 18 Oct 2005 13:03:21 +0200

gnome-desktop (2.10.2-1) unstable; urgency=low

  * Sebastien Bacher:
    * New upstream version.
    * debian/patches/01_relibtoolise.patch:
      - not required.
  * Josselin Mouette:
    * Pass --as-needed to ld.
    * Don't overwrite DEB_CONFIGURE_SCRIPT_ENV completely.

 -- Sebastien Bacher <seb128@debian.org>  Thu, 30 Jun 2005 19:03:25 +0200

gnome-desktop (2.10.2-1) unstable; urgency=low

  * Sebastien Bacher:
    * New upstream version.
    * debian/patches/01_relibtoolise.patch:
      - not required.
  * Josselin Mouette:
    * Pass --as-needed to ld.
    * Don't overwrite DEB_CONFIGURE_SCRIPT_ENV completely.

 -- Sebastien Bacher <seb128@debian.org>  Thu, 30 Jun 2005 19:03:25 +0200

gnome-desktop (2.10.1-2) unstable; urgency=low

  * Upload to unstable.

 -- Ondřej Surý <ondrej@sury.org>  Tue,  7 Jun 2005 16:05:50 +0200
