@@ -5,8 +5,9 @@ gnome-desktop (2.12.3-1) unstable; urgency=low
 
   [ Loic Minier ]
   * New upstream release.
+  * Add ${misc:Depends} deps.
 
- -- Loic Minier <lool@dooz.org>  Wed,  1 Mar 2006 19:18:54 +0100
+ -- Loic Minier <lool@dooz.org>  Wed,  1 Mar 2006 19:21:17 +0100
 
 gnome-desktop (2.12.2-2) unstable; urgency=low
 
